--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "mocha -r ts-node/register test/**/*.spec.ts"
+    "test": "mocha -r ts-node/register --reporter spec test/**/*.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "amqp-ts": "git+https://github.com/nutes-uepb/amqp-ts.git",
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
+    "sinon": "^7.3.2",
     "typescript": "^3.4.5"
   },
   "dependencies": {
