--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/bluebird": "^3.5.26",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
-    "ts-node": "^8.1.0"
+    "ts-node": "^8.1.0",
+    "winston": "^3.2.1"
   }
 }
