--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Library for publish and subscribe events on the OCARIoT platform message bus.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "start": "npm run build",
+    "build": "tslint -c tslint.json src/**/*.ts && tsc",
     "test": "mocha -r ts-node/register --reporter spec test/**/*.spec.ts"
   },
   "repository": {
@@ -19,18 +20,19 @@
   },
   "homepage": "https://github.com/nutes-uepb/ocariot-pubsubjs#readme",
   "devDependencies": {
-    "@types/node": "^11.13.9",
-    "amqp-ts": "git+https://github.com/nutes-uepb/amqp-ts.git",
-    "chai": "^4.2.0",
-    "mocha": "^6.1.4",
-    "sinon": "^7.3.2",
-    "typescript": "^3.4.5"
+    "amqp-ts": "git+https://github.com/nutes-uepb/amqp-ts.git"
   },
   "dependencies": {
+    "@types/node": "^11.13.9",
     "@types/bluebird": "^3.5.26",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "sinon": "^7.3.2",
     "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5",
     "winston": "^3.2.1"
   }
 }
