--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ocariot-pubsubjs",
   "version": "1.0.0",
   "description": "Library for publish and subscribe events on the OCARIoT platform message bus.",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "start": "npm run build",
     "build": "tslint -c tslint.json src/**/*.ts && tsc",
@@ -34,5 +34,8 @@
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
     "winston": "^3.2.1"
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
