Functionality Developed: 	-Issuing and mapping of 'lost_connection', 'trying_connection' and 'reconnected' events in the EventBus class (eventbus.ts) 	-Readme Write Start 	-Restructuring of class OcariotPubSub (ocariot.pub.sub.ts) passing inherits from class EventBus 	-Exposure (index.ts) of the EventName (event.name.ts), ExchangeName (exchange.name.ts), QueueName (queue.name.ts), and RoutingKeysName (routing.keys.name.ts) 	-Restructuring the project

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,20 @@ typings/
 
 # next.js build output
 .next
+
+
+# certificates and keys directories and files
+
+.certs
+
+*.pem
+
+*.crt
+
+*.key
+
+*.csr
+
+*.cert
+
+certs
