--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "url": "https://github.com/nutes-uepb/ocariot-pubsubjs/issues"
   },
   "homepage": "https://github.com/nutes-uepb/ocariot-pubsubjs#readme",
-  "devDependencies": {},
   "dependencies": {
-    "@types/node": "^11.13.9",
+    "amqp-client-node": "^1.0.3"
+  },
+  "devDependencies": {
     "@types/bluebird": "^3.5.26",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
+    "@types/node": "^11.13.9",
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
     "sinon": "^7.3.2",
