--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
     "url": "https://github.com/ocariot/rabbitmq-client-node.git/issues"
   },
   "homepage": "https://github.com/ocariot/rabbitmq-client-node.git#readme",
-  "dependencies": {
-    "amqp-client-node": "^1.0.3"
-  },
   "nyc": {
     "include": [
       "**/*.tsx",
@@ -59,6 +56,10 @@
     "async",
     "communication"
   ],
+  "dependencies": {
+    "amqp-client-node": "^1.0.3",
+    "winston": "^3.2.1"
+  },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
@@ -68,8 +69,7 @@
     "nyc": "^14.1.1",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
-    "typescript": "^3.4.5",
-    "winston": "^3.2.1"
+    "typescript": "^3.4.5"
   },
   "files": [
     "lib/**/*"
