--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ocariot/rabbitmq-client-node",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0",
   "description": "Library for publish and subscribe events on the OCARIoT platform message bus.",
   "main": "lib/index.js",
   "scripts": {
@@ -57,8 +57,7 @@
     "communication"
   ],
   "dependencies": {
-    "amqp-client-node": "^1.0.3",
-    "winston": "^3.2.1"
+    "amqp-client-node": "^1.0.3"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
