--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@ocariot/rabbitmq-client-node",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "High abstraction library for message handling on the OCARIoT platform RabbitMQ event bus.",
   "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
     "start": "npm run build",
     "build": "tsc",
@@ -57,7 +58,7 @@
     "communication"
   ],
   "dependencies": {
-    "amqp-client-node": "^1.0.5"
+    "amqp-client-node": "^1.0.7"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
