--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ocariot/rabbitmq-client-node",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "High abstraction library for message handling on the OCARIoT platform RabbitMQ event bus.",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -8,8 +8,8 @@
     "start": "npm run build",
     "build": "tsc",
     "prebuild": "tslint -c tslint.json -p tsconfig.json",
-    "test": "nyc --clean --all --reporter=text-summary mocha --opts test/mocha.opts test/**/*.spec.ts",
-    "test:cov": "nyc --clean --all --reporter=html --reporter=text mocha --opts test/mocha.opts test/**/*.spec.ts"
+    "test": "nyc --clean --all --reporter=text-summary mocha --config test/.mocharc.yml test/**/*.spec.ts",
+    "test:cov": "nyc --clean --all --reporter=html --reporter=text mocha --config test/.mocharc.yml test/**/*.spec.ts"
   },
   "author": "NUTES/UEPB",
   "license": "Apache-2.0",
@@ -58,18 +58,18 @@
     "communication"
   ],
   "dependencies": {
-    "amqp-client-node": "^1.0.8"
+    "amqp-client-node": "^1.0.9"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.5",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.12",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^12.12.31",
     "chai": "^4.2.0",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1",
-    "ts-node": "^8.5.2",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.2"
+    "mocha": "^7.1.1",
+    "nyc": "^15.0.0",
+    "ts-node": "^8.8.1",
+    "tslint": "^6.1.0",
+    "typescript": "^3.8.3"
   },
   "files": [
     "lib/**/*"
